[package]
name = "bincrc_codec"
version = "0.1.0"
authors = ["Roman Isaikin <romix.lab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc16 = "0.4.0"
generic-array = "0.13.2"
tokio-util = { version = "0.2.0", features = ["codec"], default-features = false, optional = true }
bytes = { version = "0.5", optional = true }

[features]
default = ["std"]
std = ["tokio-util", "bytes"]